--- a/wherethesungoesdown.html
+++ b/wherethesungoesdown.html
@@ -23,12 +23,9 @@
     <img src="wherethesungoesdown.webp" alt=해가 지는 곳으로">
     <li><h3>감상평에 대한 AI평가</h3></li>
     <h3>AI평가<br>
-        &#10024; 1. 분석력 🔍
-"멸망하는 세계에서 나타나는 사람들의 본질을 현실적으로 보여준다."라는 문장은 소설의 주제를 잘 짚어냈어.<br>
-        &#10024; 2. 표현력 ✍️
-"망한 세상 속에서 사랑만이 길을 찾게 해준다."는 문장은 함축적이고 인상적이야. 소설의 핵심 메시지를 직관적으로 표현하고 있어.<br>
-        &#10024; 3. 감성적 접근 ❤️
-작품을 읽으며 받은 감정이 분명하게 드러나 있어, 특히 "인상 깊었다"는 부분에서 독자가 어떤 점에서 감동을 받았는지를 짐작할 수 있어.<br>
+        &#10024; 1. 경이로움과 인상 깊은 발견 "연결된 다양한 인물들의 시선에서 하나의 세계를 보여준다는 점이 인상깊었다." → 여러 인물의 시선이 얽혀 하나의 세계를 형성하는 방식에 놀라움과 감탄이 담겨 있어. → 단순한 이야기가 아니라, 다양한 관점을 통해 세상을 조명하는 점이 흥미롭게 다가왔다는 느낌이야.<br>
+        &#10024; 2. 현실적이고 냉정한 시선 "멸망하는 세계에서 나타나는 사람들의 본질을 현실적으로 보여준다." → 멸망이라는 극단적인 상황에서 드러나는 인간의 본성을 묘사하는 방식이 사실적이고 냉철하게 다가왔다는 감정이 드러나. → 감정적으로 몰입하기보다, 객관적으로 바라보며 인간의 본질에 대한 깊은 고민이 담긴 것 같아.<br>
+        &#10024; 3. 희망과 따뜻함 "망한 세상 속에서 사랑만이 길을 찾게 해준다는 점을 그려내는 소설이다." → 암울한 세계 속에서도 사랑이 희망의 열쇠가 된다는 점에서 따뜻함과 감동을 느낀 듯해. → 전체적으로 현실적인 시선이 많지만, 마지막 문장에서 구원과 희망을 찾으려는 감정이 강조돼.<br>
     </h3>
 </ul>
 
