--- a/wherethesungoesdown.html
+++ b/wherethesungoesdown.html
@@ -18,7 +18,7 @@
     <li><h3>감상평에 대한 AI그림</h3></li>
     <h3>멸망하는 세계에서 나타나는 사람들의 본질을 현실적으로 보여준다.
 연결된 다양한 인물들의 시선에서 하나의 세계를 보여준다는 점이 인상깊었다.
-망한 세상 속에서 사랑만이 길을 찾게 해준다는 점을 그려내는 소설이다.<br> 
+무너진 세상 속에서 결국 사랑이 유일한 희망이 된다는 점이 이 작품의 가장 큰 메시지다.<br> 
     </h3>
     <img src="wherethesungoesdown.webp" alt=해가 지는 곳으로">
     <li><h3>감상평에 대한 AI평가</h3></li>
