--- a/tomatocupnoodle.html
+++ b/tomatocupnoodle.html
@@ -14,7 +14,7 @@
     <li><h3>작가</h3></li>
     <h3>차정은</h3>
     <li><h3>출판일</h3></li>
-    <h3>2022년</h3>
+    <h3>2024년</h3>
     <li><h3>감상평에 대한 AI그림</h3></li>
     <h3>아름다운 단어들로 사랑에 대해 말하는 책이다. 
 여름 분위기인 책이지만 나는 겨울에 이 시집을 구매하였는데, 읽으며 여름을 더 갈망하게 된 것 같다. 
@@ -23,12 +23,18 @@
     <img src="tomato.webp" alt=토마토 컵라면">
     <li><h3>감상평에 대한 AI평가</h3></li>
     <h3>AI평가<br>
-        &#10024; 1. 표현력 🌿
-"아름다운 단어들로 사랑에 대해 말하는 책이다."라는 문장은 간결하면서도 책의 본질을 잘 전달하고 있어.<br>
-        &#10024; 2. 분석력 🔍
-책의 계절적 분위기(여름)와 본인이 책을 읽은 시점(겨울)을 대비하며 감정을 분석한 점이 흥미로워.<br>
-        &#10024; 3. 개인적 경험과 연계 ☕
-책을 읽은 계절과 감정 변화를 연결한 점이 감상의 진정성을 높여줘.<br>
+        &#10024; 1. 감성적이고 따뜻한 여운
+"아름다운 단어들로 사랑에 대해 말하는 책이다."
+→ 책의 언어가 섬세하고 감성적이라는 점을 강조하고 있어.
+→ 사랑을 다루는 방식이 단순하지 않고, 아름답고 서정적인 분위기로 표현되었다는 감탄이 느껴져.<br>
+        &#10024; 2. 계절과 감정의 대비에서 오는 그리움
+"여름 분위기인 책이지만 나는 겨울에 이 시집을 구매하였는데, 읽으며 여름을 더 갈망하게 된 것 같다."
+→ 겨울이라는 현실과 여름이라는 이미지가 대비되면서, 그 계절에 대한 그리움과 동경이 나타나.
+→ 단순한 책의 분위기 묘사가 아니라, 책이 계절감을 강하게 전달했다는 점에서 감성적인 몰입이 보이네.<br>
+        &#10024; 3. 편안하고 포근한 느낌
+"간단하게 읽기 좋은 몽글몽글한 시들이 많다."
+→ "몽글몽글"이라는 단어에서 따뜻하고 부드러운 감성이 전해져.
+→ 시들이 부담스럽지 않고 편안하게 즐길 수 있는 분위기라는 점을 강조하는 표현이야.<br>
     </h3>
 </ul>
 
