--- a/tomatocupnoodle.html
+++ b/tomatocupnoodle.html
@@ -16,9 +16,11 @@
     <li><h3>출판일</h3></li>
     <h3>2024년</h3>
     <li><h3>감상평에 대한 AI그림</h3></li>
-    <h3>아름다운 단어들로 사랑에 대해 말하는 책이다. 
-여름 분위기인 책이지만 나는 겨울에 이 시집을 구매하였는데, 읽으며 여름을 더 갈망하게 된 것 같다. 
-분위기를 잘 표현했다는 말이다. 간단하게 읽기 좋은 몽글몽글한 시들이 많다.<br> 
+    <h3>이 책은 아름다운 단어들로 사랑을 말하는 시집이다. 사랑을 노래하는 많은 작품이 있지만, 이 책은 특히 그 표현이 섬세하고 감각적이다. 단순히 감정을 나열하는 것이 아니라, 사랑의 순간들을 부드럽고 따뜻한 언어로 직조해낸다. 마치 한 편의 그림처럼, 한 곡의 음악처럼 독자의 마음속에 잔잔하게 스며든다. 읽다 보면 사랑이란 무엇인지 다시금 곱씹게 되는 순간이 많아진다.
+책의 분위기는 명확하게 여름을 닮아 있다. 따뜻한 햇살, 촉촉한 공기, 살랑이는 바람, 그리고 어딘가 몽환적인 저녁 풍경이 떠오른다. 하지만 나는 이 시집을 겨울에 구매하여 읽었다. 창밖에는 차가운 바람이 불고, 공기는 차분한 적막에 잠겨 있었다. 그런데도 이 시집을 펼치는 순간, 나는 마치 다른 계절 속으로 걸어 들어간 것만 같았다. 겨울의 한가운데에서 여름을 읽는 경험은 계절의 대비를 더욱 극명하게 만들었고, 그만큼 여름을 더욱 갈망하게 했다.
+이 책이 보여주는 계절의 감각과 분위기는 단순한 배경이 아니라, 감정을 더욱 선명하게 만들어 주는 요소였다. 사랑과 여름은 닮아 있다. 찬란하고, 뜨겁고, 때로는 덧없이 사라지기도 한다. 책을 읽으며 여름의 공기, 햇빛 아래 반짝이는 감정들, 한낮의 게으름, 그리고 그 속에서 피어나는 사랑의 순간들을 떠올렸다. 글을 통해 여름을 그리워하게 된다는 것은, 그만큼 책이 분위기를 잘 표현했다는 의미이기도 하다.
+무엇보다 이 시집은 부담 없이 가볍게 읽을 수 있는 "몽글몽글한" 시들로 가득하다. 깊고 묵직한 감정보다는, 일상의 소소한 순간 속에서 피어나는 감정을 따뜻한 시선으로 포착하고 있다. 한 편을 읽고 나면 마치 햇살 아래에서 눈을 감고 잠시 쉬어 간 듯한 기분이 든다. 간결하지만 감성을 자극하는 문장들이 많아, 짧은 글 속에서도 깊은 여운을 남긴다.
+이 시집은 한 계절의 감각을 선명하게 담아낸 책이자, 사랑이라는 감정을 가장 아름다운 언어로 표현한 책이다. 여름이 그리운 날, 혹은 따뜻한 감성이 필요한 날 다시 펼쳐보고 싶은 책이다.<br> 
     </h3>
     <img src="tomato.webp" alt=토마토 컵라면">
     <li><h3>감상평에 대한 AI평가</h3></li>
