--- a/arttheater.html
+++ b/arttheater.html
@@ -16,9 +16,11 @@
     <li><h3>출판일</h3></li>
     <h3>2021년</h3>
     <li><h3>감상평에 대한 AI그림</h3></li>
-    <h3>평소 명화는 자주 봤지만 정작 그 그림을 그린 화가에 대해서는 잘 모르고 있었다.
-클림트, 로트레크, 무하, 모딜리아니, 모네 모두 행복하지만은 않은 삶을 산 것 같다.
-왜 화가들은 다 힘든 삶을 살게 되는 건지 궁금하다...<br> 
+    <h3>평소 명화는 자주 감상했지만, 정작 그 그림을 그린 화가에 대해서는 깊이 알지 못했다. 우리는 아름다운 작품을 보며 감탄하고 감정을 느끼지만, 그 그림이 탄생하기까지 화가가 어떤 삶을 살았는지는 쉽게 놓치곤 한다. 화려한 색채와 섬세한 터치, 강렬한 감성이 담긴 그림들 뒤에는, 종종 고독과 고난이 함께하고 있었다.
+클림트, 로트레크, 무하, 모딜리아니, 모네— 이들의 이름은 미술사에서 빛나는 거장들이지만, 모두 행복하지만은 않은 삶을 살아왔다. 클림트의 작품은 황금빛으로 가득 차 있지만, 그는 평생 예술과 사회적 시선 사이에서 갈등하며 살았다. 로트레크는 신체적 장애와 알코올 중독으로 힘든 삶을 살았으며, 무하는 상업적인 성공을 거두었지만, 예술적 자유를 위해 끊임없이 고민했다. 모딜리아니는 가난과 질병 속에서도 독창적인 화풍을 완성하려 애썼고, 모네는 사랑하는 이를 잃고 실의에 빠졌던 순간에도 끊임없이 빛과 자연을 담아냈다.
+그렇다면 왜 위대한 화가들은 대부분 힘든 삶을 살았을까? 단순히 가난 때문이었을까, 아니면 예술가로서의 고독 때문이었을까? 아마도 그들의 삶이 고단했던 이유는, 세상이 쉽게 이해하지 못하는 새로운 것을 창조해야만 했기 때문일 것이다. 기존의 틀을 깨고 자신만의 길을 개척하는 것은 언제나 많은 저항과 희생을 동반한다. 예술가들은 시대를 앞서 나가면서도, 그 시대의 한계 안에서 살아야 했다.
+그림을 감상할 때, 이제는 단순히 색채나 구도만이 아니라 그 작품을 탄생시킨 화가의 삶과 감정까지 함께 들여다보아야겠다는 생각이 들었다. 그들의 고통과 열정이 담긴 작품들은 단순한 미적 즐거움을 넘어, 삶과 예술이 하나로 얽힌 깊은 이야기를 전해주고 있다.
+<br> 
     </h3>
     <img src="arttheater.webp" alt=도슨트 정우철의 미술 극장">
     <li><h3>감상평에 대한 AI평가</h3></li>
